# mmm-portfolio

./: .gitignore  README.md
01-bayesian-mmm-stan/: .gitignore  README.md  fit_mmm.py  generate_data.py  pyproject.toml  report.tex
01-bayesian-mmm-stan/data/: ground_truth.csv  marketing_data.csv
01-bayesian-mmm-stan/stan/: mmm.stan
02-geo-lift-calibration/: .gitignore  README.md  fit_calibration.py  generate_data.py  pyproject.toml  report.tex
02-geo-lift-calibration/data/: experiment_truth.csv  geo_experiment.csv  ground_truth.csv  marketing_data.csv
02-geo-lift-calibration/stan/: lift.stan  mmm_calibrated.stan
03-time-varying-mmm/: .gitignore  README.md  fit_tvc.py  generate_data.py  pyproject.toml  report.tex
03-time-varying-mmm/data/: ground_truth_search_alpha_t.csv  ground_truth_static.csv  marketing_data.csv
03-time-varying-mmm/stan/: mmm_tvc.stan
04-bayesian-sc-sdid/: README.md  fit_compare.py  generate_data.py  mc_study.py  pyproject.toml  report.tex
04-bayesian-sc-sdid/data/: Y_wide.csv  ground_truth.csv  panel.csv
04-bayesian-sc-sdid/stan/: bayesian_sc.stan  bayesian_sdid.stan
