[project]
name = "04-bayesian-sc-sdid"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arviz>=1.2.0",
    "cmdstanpy>=1.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "reportlab>=4.5.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
